# gpu

./: CMakeLists.txt  Doxyfile  LICENSE  LLM.md  README.md
benchmarks/: CMakeLists.txt  bench_all.cpp  bench_common.hpp  bench_crypto.cpp  bench_fhe.cpp  bench_tensor.cpp
cmake/: kinet-gpu.pc.in  kinetgpu-config.cmake.in
docs/: api.md  examples.md  index.md  install.md
include/kinet/: gpu.h
include/kinet/gpu/: backend_plugin.h  kernel_loader.h
kernels/: blake3.metal  blake3.wgsl  blind_rotate.cu  blind_rotate.metal  blind_rotate.wgsl  blind_rotate_fused.cu  blind_rotate_fused.metal  blind_rotate_fused.wgsl  bls12_381.metal  bls12_381.wgsl  bsk_prefetch.cu  bsk_prefetch.metal  bsk_prefetch.wgsl  cggmp21.metal  cggmp21.wgsl  dag_executor.cu  dag_executor.metal  dag_executor.wgsl  ed25519.metal  ed25519.wgsl  evm256.cu  evm256.wgsl  external_product_batch.cu  external_product_batch.metal  external_product_batch.wgsl  external_product_fused.cu  external_product_fused.metal  external_product_fused.wgsl  fhe_kernels.cu  fhe_kernels.metal  fhe_kernels.wgsl  four_step_ntt.cu  four_step_ntt.metal  four_step_ntt.wgsl  frost.metal  frost.wgsl  fused_external_product.cu  fused_external_product.metal  fused_external_product.wgsl  keccak256.cu  (+38 more)
kernels/cpu/: tensor_ops.c  tensor_ops.h
src/: bn254_field.hpp  cpu_backend.cpp  cuda_backend.cpp  dawn_backend.cpp  gpu_core.cpp  gpu_internal.h  kernel_loader.cpp  metal_backend.mm  plugin_loader.hpp  zk_ops.cpp
test/: bench_all_crypto.cpp  bench_ecrecover.cpp  test_backends.cpp  test_core.cpp  test_coverage_complete.cpp  test_cpu.cpp  test_edge_cases.cpp  test_kernel_loader.cpp  test_zk_ops.cpp
webgpu/: CMakeLists.txt
webgpu/kernels/fhe/: ntt_fhe.wgsl
webgpu/kernels/zk/: fhe.wgsl  merkle.wgsl  ntt.wgsl  poseidon2.wgsl
